--- a/singlewindow/singlewindow/src/main/resources/static/html/Officer_dashboard.html
+++ b/singlewindow/singlewindow/src/main/resources/static/html/Officer_dashboard.html
@@ -142,7 +142,7 @@
             <th>Date Submitted</th>
             <th>Status</th>
             <th>View Document</th>
-            <th>Action</th>
+   
           </tr>
         </thead>
         <tbody id="approvedTableBody"></tbody>
@@ -150,24 +150,23 @@
     </div>
   </section>
 
-  <!-- Rejected section -->
-  <section id="rejected-section" class="section-content container my-4 p-4 border rounded shadow-lg" style="display: none;">
-    <h2>Rejected</h2>
-    <div class="documents" id="rejected-documents"></div>
-    <table class="table table-striped table-bordered">
-      <thead class="thead-dark">
-        <tr>
-          <th>#</th>
-          <th>Applicant Name</th>
-          <th>Application ID</th>
-          <th>Department</th>
-          <th>Date</th>
-          <th>Document</th>
-        </tr>
-      </thead>
-      <tbody id="rejectedTableBody"></tbody>
-    </table>
-  </section>
+<!-- Rejected Applications Section -->
+<section id="rejected-section" class="section-content container my-4 p-4 border rounded shadow-lg" style="display: none;">
+  <h2>Rejected Applications</h2>
+  <table class="table table-striped table-bordered">
+    <thead class="thead-dark">
+      <tr>
+        <th>#</th>
+        <th>Applicant Name</th>
+        <th>Application ID</th>
+        <th>Department</th>
+        <th>Date</th>
+        <th>Status</th>
+      </tr>
+    </thead>
+    <tbody id="rejectedTableBody"></tbody>
+  </table>
+</section>
 
   <!-- Profile section -->
   <section id="profile-section" class="section-content" style="display: none;">
